some renaming and better logging of sql command